--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,29 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <title>Ultimate Beer Quiz - Test Your Knowledge of Karl Strauss Beers</title>
+
+    <!-- Meta Description -->
+    <meta name="description" content="Take the Ultimate Beer Quiz and test your knowledge of Karl Strauss beers! Learn about different beers and their characteristics through this fun and interactive quiz.">
+  
+    <!-- Additional Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Gamaliel Burgos">
+    <meta name="keywords" content="beer quiz, Karl Strauss beer, beer trivia, beer education, craft beer, quiz app, interactive quiz, beer study, beer knowledge">
+    
+    <!-- Open Graph Meta Tags (For Social Media Previews) -->
+    <meta property="og:title" content="Ultimate Beer Quiz - Test Your Beer Knowledge">
+    <meta property="og:description" content="Challenge yourself with the Ultimate Beer Quiz! How well do you know Karl Strauss beers? Take the quiz now and find out!">
+    <meta property="og:image" content="link-to-your-image.jpg">
+    <meta property="og:url" content="https://yourwebsite.com/beer-quiz">
+    <meta property="og:type" content="website">
+  
+    <!-- Twitter Card Meta Tags (For Twitter Previews) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Ultimate Beer Quiz - Test Your Knowledge of Karl Strauss Beers">
+    <meta name="twitter:description" content="Take the Ultimate Beer Quiz and test your knowledge of Karl Strauss beers! Learn about different beers and their characteristics through this fun and interactive quiz.">
+    <meta name="twitter:image" content="link-to-your-image.jpg">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +43,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
